# CameraTracking

./: .gitignore
pylon/: .cproject  .project  Grab.cpp  Makefile
src/: .directory
src/camera_pylon/: CMakeLists.txt  package.xml
src/camera_pylon/cfg/: .directory  CameraConfig.cfg
src/camera_pylon/cfg/cpp/camera_pylon/: CameraTrackingConfig.h
src/camera_pylon/docs/: CameraTrackingConfig-usage.dox  CameraTrackingConfig.dox  CameraTrackingConfig.wikidoc
src/camera_pylon/include/: config.h  reconfigure_callback.h  tracking.h
src/camera_pylon/src/: cam_node.cpp  reconfigure_callback.cpp  tracking.cpp
src/camera_pylon/src/camera_pylon/cfg/: CameraTrackingConfig.py
src/camera_tracking/: CMakeLists.txt  package.xml
src/camera_tracking/cfg/: CameraConfig.cfg
src/camera_tracking/cfg/cpp/camera_tracking/: CameraTrackingConfig.h
src/camera_tracking/docs/: CameraTrackingConfig-usage.dox  CameraTrackingConfig.dox  CameraTrackingConfig.wikidoc
src/camera_tracking/include/: config.h  reconfigure_callback.h
src/camera_tracking/src/: reconfigure_callback.cpp  tracking.cpp
src/camera_tracking/src/camera_tracking/cfg/: CameraTrackingConfig.py
src/tracking/: CMakeLists.txt  CMakeLists.txt~  package.xml  track.launch  usbcam.launch
src/tracking/scripts/: ImageProcessing.py  Input.py  ir-track.py  ir-track_new.py
src/tracking/srv/: Pos.srv  Velocity.srv
